--- a/software.html
+++ b/software.html
@@ -39,7 +39,15 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.commercialappeal.com/Job?data=XI1fsyQrh9u0esy/ajZmgWS/rTpmjyWuwnRLRcInuzCmMG%2BwyZTIQA%3D%3D'>Senior Software Developer job in Collierville, TN (38017) - The Commercial Appeal</a></h5> 
+<h5><a href='https://jobs.lever.co/bluecore/3ffe119b-0318-49e5-a2d3-237563aa3357'>Bluecore - Software Engineer Intern</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://advisorengine.breezy.hr/p/9bb0a8ab0cb3-software-developer-lead-java'>Software Developer Lead (Java) at AdvisorEngine</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.commercialappeal.com/Job?data=XI1fsyQrh9u0esy/ajZmgWS/rTpmjyWuwnRLRcInuzCmMG%2BwyZTIQA%3D%3D'>Senior Software Developer job in Collierville, TN (38017) - The Commercial Appeal</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -91,11 +99,11 @@
 <p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/util/jobs/4434918002'>Job Application for Senior Software Engineer at Util</a></h5> 
+<h5><a href='https://boards.greenhouse.io/util/jobs/4434918002'>Job Application for Senior Software Engineer at Util</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://themomproject-com.breezy.hr/p/e65752334a4b-mid-level-software-engineer'>Mid-level Software Engineer at TheMomProject.com</a></h5> 
+<h5><a href='https://themomproject-com.breezy.hr/p/e65752334a4b-mid-level-software-engineer'>Mid-level Software Engineer at TheMomProject.com</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -173,7 +181,7 @@
 <p><span class="badge badge-light">Burlington, MA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://l10n.org/job/robotics-localization-software-engineer/'>Robotics Localization Software Engineer ? Localization Jobs</a></h5> 
+<h5><a href='https://l10n.org/job/robotics-localization-software-engineer/'>Robotics Localization Software Engineer ? Localization Jobs</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -237,7 +245,7 @@
 <p><span class="badge badge-light">Bristol, UK</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Nexthink/743999698644675-senior-software-engineer-macos-'>Nexthink Senior Software Engineer (MacOS) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Nexthink/743999698644675-senior-software-engineer-macos-'>Nexthink Senior Software Engineer (MacOS) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Lausanne, Switzerland</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -269,7 +277,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/recurly/78b93aa9-bdb2-4f68-ac68-b4925b20d78d'>Recurly - Software Engineer, Growth</a></h5> 
+<h5><a href='https://jobs.lever.co/recurly/78b93aa9-bdb2-4f68-ac68-b4925b20d78d'>Recurly - Software Engineer, Growth</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -325,7 +333,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://www.securityclearedjobs.com/job/801894188/senior-software-engineer/?TrackID=3258'>Senior Software Engineer job with Raytheon Systems | 801894188</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.securityclearedjobs.com/job/801894188/senior-software-engineer/?TrackID=3258'>Senior Software Engineer job with Raytheon Systems | 801894188</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -373,11 +381,11 @@
 <p><span class="badge badge-light">Singapore Singapore  Singapore, Singapore</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/agoda/jobs/1939340'>Job Application for Software Engineer - Big Data/Machine Learning at Agoda</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/agoda/jobs/1939340'>Job Application for Software Engineer - Big Data/Machine Learning at Agoda</a></h5> 
 <p><span class="badge badge-light">Singapore  Singapore  Singapore</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.welovegolang.com/jobs/software-engineer-backend-tokyo-relocation-provided-5689436834627584'>Software Engineer, Backend (Tokyo) (Relocation Provided) at Mercari, Inc. - We Love Go</a></h5> 
+<h5><a href='https://www.welovegolang.com/jobs/software-engineer-backend-tokyo-relocation-provided-5689436834627584'>Software Engineer, Backend (Tokyo) (Relocation Provided) at Mercari, Inc. - We Love Go</a></h5> 
 <p><span class="badge badge-light">Tokyo Tokyo Tokyo, Japan</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -421,7 +429,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://experian.referrals.selectminds.com/jobs/senior-software-developer-14094'>Senior Software Developer - Experian Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/senior-software-developer-14094'>Senior Software Developer - Experian Careers</a></h5> 
 <p><span class="badge badge-light">Tennessee United States  North America</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -432,14 +440,6 @@
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oKJpafwM&__jvst=Employee+Referral&__jvsd=sSaLPhwo&__jvsc=Twitter&bid=nsBkqMw4'>NICE Careers - Sr.Full Stack Developer / Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TRICENTIS/743999698628360-software-engineer'>TRICENTIS Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Pune, India</span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AccoladeInc/743999698625073-software-engineer-iii-back-end-java-aws-'>Accolade, Inc. Software Engineer III (Back-End - Java & AWS) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Seattle, WA</span></p>
-<p>Posted on: 2019-11-01</p>
 <hr/>
 
 
